--- a/frontend/landing-page/css/modal-form-elements.css
+++ b/frontend/landing-page/css/modal-form-elements.css
@@ -1,5 +1,6 @@
 
 input[type="text"], 
+input[type="password"],
 textarea, 
 textarea.form-control {
 	height: 50px;
@@ -25,7 +26,8 @@ textarea.form-control {
 	line-height: 30px;
 }
 
-input[type="text"]:focus, 
+input[type="text"]:focus,
+input[type="password"]:focus, 
 textarea:focus, 
 textarea.form-control:focus {
 	outline: 0;
@@ -37,7 +39,6 @@ textarea.form-control:focus {
 input[type="text"]:-moz-placeholder, textarea:-moz-placeholder, textarea.form-control:-moz-placeholder { color: #888; }
 input[type="text"]:-ms-input-placeholder, textarea:-ms-input-placeholder, textarea.form-control:-ms-input-placeholder { color: #888; }
 input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placeholder, textarea.form-control::-webkit-input-placeholder { color: #888; }
-
 
 
 button.btn {
